@@ -1,10 +1,11 @@
 lilv (0.24.25) unstable; urgency=medium
 
+  * Add lint option with project metadata and code quality tests
   * Fix C++ test build on MacOS
   * Fix library current_version on MacOS
   * Fix test suite when TMPDIR has no trailing slash
 
- -- David Robillard <d@drobilla.net>  Sat, 16 Mar 2024 13:51:02 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 06 Oct 2024 18:20:31 +0000
 
 lilv (0.24.24) stable; urgency=medium
 
